2018-08-09  Ali Juma  <ajuma@chromium.org>

        Import WPTs for IntersectionObserver
        https://bugs.webkit.org/show_bug.cgi?id=188416

        Reviewed by Simon Fraser.

        Enable IntersectionObserver in DumpRenderTree. 

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (enableExperimentalFeatures):
        (setWebPreferencesForTestOptions):
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetPreferencesToConsistentValues):

2018-08-08  Ross Kirsling  <ross.kirsling@sony.com>

        run-bindings-tests is not Win32-compatible
        https://bugs.webkit.org/show_bug.cgi?id=188424

        Reviewed by Fujii Hironori.

        * Scripts/webkitpy/bindings/main.py:
        (BindingsTests.main):
        Stop leaking file descriptors.
        (See https://www.logilab.org/blogentry/17873 for details, though the solution here is even simpler.)

2018-08-08  Alex Christensen  <achristensen@webkit.org>

        Fix possible null dereference in WebBackForwardList::restoreFromState
        https://bugs.webkit.org/show_bug.cgi?id=188418
        <rdar://problem/42531726>

        Reviewed by Chris Dumez.

        * TestWebKitAPI/Tests/WebKit/RestoreSessionState.cpp:
        (TestWebKitAPI::TEST):

2018-08-08  Ross Kirsling  <ross.kirsling@sony.com>

        run-builtins-generator-tests does not correctly handle CRLFs from stderr
        https://bugs.webkit.org/show_bug.cgi?id=188392

        Reviewed by Fujii Hironori.

        Background:
        file.write converts LF to os.linesep, so if the input string contains CRLF, we end up writing CRCRLF to the file.

        * Scripts/webkitpy/common/system/executive.py:
        (Executive.run_command):
        Normalize CRLF to LF in decoded stdout/stderr data, so that we don't return consumers a platform-specific string.

2018-08-08  Aditya Keerthi  <akeerthi@apple.com>

        Unreviewed, add myself to committers list.

        * Scripts/webkitpy/common/config/contributors.json:
